# demo_web_extention

./: .gitignore  Cargo.toml  manifest.json  overview.md  popup.js  readme.md  script.js
chrome/: manifest.json  popup.html
common/: overview.md
firefox/: manifest.json  popup.js  styles.css
src/: lib.rs
