[package]
name = "plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib", "rlib"]

[dependencies]
js-sys = "0.3.61"
wasm-bindgen = "0.2.70"
wasm-bindgen-futures = "0.4.34"
web-sys = { version = "0.3.61", features = [
  "Window",
  "Document",
  "NodeList",
  "Element",
  "ServiceWorkerGlobalScope",
  "Navigator",
  "ServiceWorkerContainer",
  "ServiceWorker",
  "Clients",
  "MediaDevices",
  "HtmlElement"
] }

